tests/js/harness.core
assert (contains GLOBAL_context.Realm.GlobalEnv.EnvironmentRecord.VarNames "assert")
assert (contains GLOBAL_context.Realm.GlobalEnv.EnvironmentRecord.VarNames "Test262Error")
assert (contains GLOBAL_context.Realm.GlobalEnv.EnvironmentRecord.VarNames "$DONOTEVALUATE")
assert (contains GLOBAL_context.Realm.GlobalEnv.EnvironmentRecord.VarNames "$ERROR")
